--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "turbo": "2.1.1",
     "typescript": "^5.5.4"
   },
-  "packageManager": "bun@1.1.26"
+  "packageManager": "bun@1.1.26",
+  "dependencies": {
+    "openai": "^4.85.4"
+  }
 }
