--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-  "buildCommand": "cd apps/app && bun install && bun run build",
+  "buildCommand": "cd apps/app && npm install && npm run build",
   "outputDirectory": "apps/app/.next",
   "framework": "nextjs"
 }
